--- a/shared/translations/languages/de.json
+++ b/shared/translations/languages/de.json
@@ -85,7 +85,7 @@
     "YOUR ASSETS": "DEINE AKTIVA",
     "Available: ": "Verfügbar: ",
     "Locked: ": "Hinterlegt: ",
-    "locked in vault(s)": "hinterlegt in Vault(s)",
+    "locked in vault(s)TEST": "hinterlegt in Vault(s)",
     "available": "verfügbar",
     "All tokens": "Alle Token",
     "LP tokens": "LP-Token",
