Test verified commit 2

--- a/shared/translations/languages/de.json
+++ b/shared/translations/languages/de.json
@@ -88,6 +88,7 @@
     "locked in vault(s)": "hinterlegt in Vault(s)",
     "locked in vault(s)TEST": "hinterlegt in Vault(s) TEST KLAH",
     "available": "verfügbar",
+    "available TEST": "verfügbar TEST",
     "All tokens": "Alle Token",
     "LP tokens": "LP-Token",
     "Crypto": "Krypto",
